--- a/workshop/package.json
+++ b/workshop/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "gh-pages -d src"  
+    "deploy": "gh-pages -d workshop"  
   },
   "private": true,
   "dependencies": {
